--- a/index.html
+++ b/index.html
@@ -7,16 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
-
-    <title>TITLE</title>
-
-
-
+    <title>Skate Space</title>
 </head>
 
     <body>
 
-       
+        <nav class="py-2 bg-light border-bottom">
+            <div class="container d-flex flex-wrap">
+              <ul class="nav me-auto">
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Contact</a></li>
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">FAQs</a></li>
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Gallery</a></li>
+              </ul>
+            </div>
+          </nav>
+          <header class="py-3 mb-4 border-bottom">
+            <div class="container d-flex flex-wrap justify-content-center">
+              <a href="/" class="d-flex align-items-center mb-3 mb-lg-0 me-lg-auto text-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+                <span class="fs-4">Skate Space</span>
+              </a>
+              <ul class="nav me-auto">
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2 active" aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">What's On</a></li>
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Prices</a></li>
+                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Book Us</a></li>
+              </ul>
+            
+            </div>
+          </header>
 
         <script src="js/bootstrap.min.js"></script>
 
