carousel with placeholder

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <title>Skate Space</title>
+
 </head>
 
     <body>
+
+      <header>
 
         <nav class="py-2 bg-light border-bottom">
             <div class="container d-flex flex-wrap">
@@ -37,8 +40,14 @@
               </ul>
             </header>
           </div>
+        </header>
+
+
      <main>
-          <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+
+      <div class="container-fluid py-3 pt-0">
+
+          <div id="myCarousel"height = "100%" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -46,7 +55,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
                 <div class="container">
                   <div class="carousel-caption text-start">
                     <h1>What's On.</h1>
@@ -56,7 +65,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
                 <div class="container">
                   <div class="carousel-caption">
                     <h1>Book us for your own event.</h1>
@@ -66,7 +75,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
                 <div class="container">
                   <div class="carousel-caption text-end">
                     <h1>How to Find Us.</h1>
@@ -85,7 +94,17 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-            
+        </div>    
+
+
+
+
+
+
+
+
+        
+
         </main>   
 
         <script src="js/bootstrap.min.js"></script>
