--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         
         </div>
 
-        <div class="col-lg-12 d-flex justify-content-center pt-5">
+        <div class="col-lg-12 d-flex justify-content-center pt-5 pb-5">
           <img src="http://placekitten.com/1000/600" class="img-fluid" alt="...">
         </div>
 
@@ -121,6 +121,26 @@
 
 
         </main>   
+
+
+        <div class="container-fluid border-top bg-light">
+          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+              <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+              </a>
+              <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+            </div>
+
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+
+              <li class="ms-3"><a class="text-muted" href="#"><img src="images/instagram.svg" alt="Instagram Logo" width="30" height="30" class="bi"></a></li>
+              <li class="ms-3"><a class="text-muted" href="#"><img src="images/tiktok.svg" alt="Tiktok Logo" width="30" height="30" class="bi"></a></li>
+              <li class="ms-3"><a class="text-muted" href="#"><img src="images/youtube.svg" alt="Youtube Logo" width="30" height="30" class="bi"></a></li>
+
+            </ul>
+          </footer>
+        </div>
 
         <script src="js/bootstrap.min.js"></script>
 
