--- a/gallery.html
+++ b/gallery.html
@@ -19,8 +19,8 @@
             <div class="container d-flex flex-wrap">
               <ul class="nav me-auto">
                 <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Contact</a></li>
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link active link-dark px-2" aria-current="page">Gallery</a></li>
+                <li class="nav-item"><a href="faqs.html" class="nav-link link-dark px-2">FAQs</a></li>
+                <li class="nav-item"><a href="gallery.html" class="nav-link active link-dark px-2" aria-current="page">Gallery</a></li>
               </ul>
             </div>
          </nav>
@@ -33,10 +33,10 @@
               </a>
         
               <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">What's On</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Book Us</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="whatson.html" class="nav-link">What's On</a></li>
+                <li class="nav-item"><a href="prices.html" class="nav-link">Pricing</a></li>
+                <li class="nav-item"><a href="booking.html" class="nav-link">Book Us</a></li>
               </ul>
             </header>
           </div>
@@ -44,11 +44,22 @@
 
 
      <main>
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h2 class="text-black d-flex justify-content-center">About</h2>
+            <p class="text-muted p-3">Welcome to our gallery, here you can find pictures and videos from our lessons/events. Feel free to look around, if you want any more information regarding a specific photo, hover your mouse over the image to read more about it.</p>
+          </div>
+        </div>
+      </div> 
 
 
 
 
 
+
+
+      
 
 
         </main>   
