--- a/whatson.html
+++ b/whatson.html
@@ -19,8 +19,8 @@
             <div class="container d-flex flex-wrap">
               <ul class="nav me-auto">
                 <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Contact</a></li>
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Gallery</a></li>
+                <li class="nav-item"><a href="faqs.html" class="nav-link link-dark px-2">FAQs</a></li>
+                <li class="nav-item"><a href="gallery.html" class="nav-link link-dark px-2">Gallery</a></li>
               </ul>
             </div>
          </nav>
@@ -33,10 +33,10 @@
               </a>
         
               <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">What's On</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Book Us</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="whatson.html" class="nav-link active" aria-current="page">What's On</a></li>
+                <li class="nav-item"><a href="prices.html" class="nav-link">Pricing</a></li>
+                <li class="nav-item"><a href="booking.html" class="nav-link">Book Us</a></li>
               </ul>
             </header>
           </div>
