--- a/gallery.html
+++ b/gallery.html
@@ -53,14 +53,58 @@
         </div>
       </div> 
 
+      <section class="row p-3">
+        <div class="col-6 col-md-4 col-lg-4">
+          <img src="http://placekitten.com/600/300" alt="Skate 1" class="img-fluid"/>
+        </div>
 
+        <div class="col-6 col-md-4 col-lg-4">
+          <img src="http://placekitten.com/600/300" alt="lorem pixum image" class="img-fluid" />
+        </div>
 
+        <div class="col-6 col-md-4 col-lg-4">
+          <img src="http://placekitten.com/600/300" alt="lorem pixum image" class="img-fluid"/>
+        </div>
 
+      </section>
 
+      <div class="container-fluid py-5">
 
+        <div id="carouselExampleFade" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://placedog.net/600/300" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="https://placebear.com/600/300" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
 
-      
+    </div>
 
+    <section class="row p-5">
+      <div class="container d-flex justify-content-center">
+        <div class="col-6 col-md-6 col-lg-6">
+          <img src="http://placekitten.com/600/600" alt="Skate 1" class="img-fluid"/>
+        </div>
+
+        <div class="col-6 col-md-6 col-lg-6">
+          <img src="http://placekitten.com/600/600" alt="lorem pixum image" class="img-fluid" />
+        </div>
+      </div>
+    </section>
 
         </main>   
 
