--- a/gallery.html
+++ b/gallery.html
@@ -47,8 +47,8 @@
       <div class="container">
         <div class="row d-flex justify-content-center">
           <div class="col-sm-8 col-md-7 py-4">
-            <h2 class="text-black d-flex justify-content-center">About</h2>
-            <p class="text-muted p-3">Welcome to our gallery, here you can find pictures and videos from our lessons/events. Feel free to look around, if you want any more information regarding a specific photo, hover your mouse over the image to read more about it.</p>
+            <h2 class="text-black d-flex justify-content-center">Welcome to our Gallery!</h2>
+            <p class="text-muted p-3">Here you can find pictures and videos from our lessons/events. Feel free to look around, if you want any more information regarding a specific photo, hover your mouse over the image to read more about it.</p>
           </div>
         </div>
       </div> 
@@ -94,17 +94,17 @@
 
     </div>
 
-    <section class="row p-5">
-      <div class="container d-flex justify-content-center">
-        <div class="col-6 col-md-6 col-lg-6">
+    
+      <div class="container d-flex justify-content-center p-5">
+        <div class="col-6 col-md-6 col-lg-6 p-3">
           <img src="http://placekitten.com/600/600" alt="Skate 1" class="img-fluid"/>
         </div>
 
-        <div class="col-6 col-md-6 col-lg-6">
+        <div class="col-6 col-md-6 col-lg-6 p-3">
           <img src="http://placekitten.com/600/600" alt="lorem pixum image" class="img-fluid" />
         </div>
       </div>
-    </section>
+    
 
         </main>   
 
