--- a/faqs.html
+++ b/faqs.html
@@ -45,10 +45,54 @@
 
      <main>
 
-     
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h2 class="text-black d-flex justify-content-center">FAQs</h2>
+            <p class="text-muted p-3">If you have a question not listed below, fill out the boxes below and we will email you when we answer the question</p>
+          </div>
+        </div>
+      </div> 
 
+      <div class="list-group d-flex justify-content-center p-5">
 
+        <a href="#" class="list-group-item list-group-item-action">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Question One</h5>
+          </div>
+          <p class="mb-1">Answer goes here.</p>
+        </a>
 
+        <a href="#" class="list-group-item list-group-item-action">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Question Two</h5>
+          </div>
+          <p class="mb-1">Answer goes here.</p>
+        </a>
+
+        <a href="#" class="list-group-item list-group-item-action">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1">Questions Three</h5>
+          </div>
+          <p class="mb-1">Answer goes here.</p>
+        </a>
+
+      </div>
+
+      <div class="row d-flex justify-content-center p-3">
+      <div class="mb-3 col-lg-8">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="mb-3 col-lg-8">
+        <label for="exampleFormControlTextarea1" class="form-label">Ask A Question</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+    </div>
+
+    <div class="col-lg-12 d-flex justify-content-center pt-5 pb-5">
+      <img src="http://placekitten.com/1000/600" class="img-fluid" alt="...">
+    </div>
 
 
 
@@ -58,7 +102,7 @@
         <div class="container-fluid border-top bg-light">
           <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-              <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <a href="index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
               </a>
               <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
