--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
 
           <div class="container">
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-              <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+              <a href="index.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
                 <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
                 <span class="fs-4">Skate Space</span>
               </a>
@@ -54,15 +54,15 @@
       </div> 
 
       <section class="row p-3">
-        <div class="col-6 col-md-4 col-lg-4">
+        <div class=" col-md-7 col-lg-4 col-sm-12">
           <img src="http://placekitten.com/600/300" alt="Skate 1" class="img-fluid"/>
         </div>
 
-        <div class="col-6 col-md-4 col-lg-4">
+        <div class=" col-md-7 col-lg-4 col-sm-12">
           <img src="http://placekitten.com/600/300" alt="lorem pixum image" class="img-fluid" />
         </div>
 
-        <div class="col-6 col-md-4 col-lg-4">
+        <div class=" col-md-7 col-lg-4 col-sm-12">
           <img src="http://placekitten.com/600/300" alt="lorem pixum image" class="img-fluid"/>
         </div>
 
