progress as always

--- a/whatson.html
+++ b/whatson.html
@@ -45,10 +45,81 @@
 
      <main>
 
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h2 class="text-black d-flex justify-content-center">Find Us!</h2>
+            <p class="text-muted p-3">add some more information here</p>
+          </div>
+        </div>
+      </div> 
+
+      <div class="container-fluid col-lg-12 d-flex justify-content-center pt-3 pb-5">
+        <img src="images/map.jpg" class="img-fluid" alt="Interactive Map">
+      </div>
     
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-8 col-md-7 py-4">
+            <h2 class="text-black d-flex justify-content-center">What's on!</h2>
+          </div>
+        </div>
+      </div> 
 
+      <div class="container-fluid row p-5">
 
+        <div class="col-12 p-3 col-md-6 col-lg-6 d-flex justify-content-evenly">
+          <img src="http://placekitten.com/500/500" class="img-fluid" alt="...">
+         </div>
+   
+        <div class="col-12 p-3 col-md-6 col-lg-6 align-self-center">
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action ">
+          <div class="d-flex w-100 justify-content-between">
+            <img src="images/red.png" class="img-fluid" width="35" height="35" alt="Red Map Marker">
+            <h5 class="mb-1">Event One</h5>
+            <small class="text-body-secondary">Date</small>
+          <p class="mb-1">Event info.</p>
+          <small class="text-body-secondary">Address</small>
+        </div>
+        </a>
 
+        <a href="#" class="list-group-item list-group-item-action">
+          <div class="d-flex w-100 justify-content-between">
+            <img src="images/pink.png" class="img-fluid" width="35" height="35" alt="Pink Map Marker">
+            <h5 class="mb-1">Event Two</h5>
+            <small class="text-body-secondary">Date</small>
+          <p class="mb-1">Event Info.</p>
+          <small class="text-body-secondary">Address</small>
+        </div>
+        </a>
+
+        <a href="#" class="list-group-item list-group-item-action">
+          <div class="d-flex w-100 justify-content-between">
+            <img src="images/purple.png" class="img-fluid" width="35" height="35" alt="Purple Map Marker">
+            <h5 class="mb-1">Event Three</h5>
+            <small class="text-body-secondary">Date</small>
+          <p class="mb-1">Event info..</p>
+          <small class="text-body-secondary">Address</small>
+        </div>
+        </a>
+
+        <a href="#" class="list-group-item list-group-item-action">
+          <div class="d-flex w-100 justify-content-between">
+            <img src="images/yellow.png" class="img-fluid" width="35" height="35" alt="Yellow Map Marker">
+            <h5 class="mb-1">Event Four</h5>
+            <small class="text-body-secondary">Date</small>
+          <p class="mb-1">Event info..</p>
+          <small class="text-body-secondary">Address</small>
+        </div>
+        </a>
+      </div>
+    </div>
+    </div>
+
+    <div class="alert alert-primary" role="alert">
+      Check our Instagram for live updates.
+    </div>
 
         </main>   
 
