website structure done
just need to add images and text content

--- a/whatson.html
+++ b/whatson.html
@@ -18,7 +18,7 @@
         <nav class="py-2 bg-light border-bottom">
             <div class="container d-flex flex-wrap">
               <ul class="nav me-auto">
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Contact</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link link-dark px-2">Contact</a></li>
                 <li class="nav-item"><a href="faqs.html" class="nav-link link-dark px-2">FAQs</a></li>
                 <li class="nav-item"><a href="gallery.html" class="nav-link link-dark px-2">Gallery</a></li>
               </ul>
@@ -117,7 +117,7 @@
     </div>
     </div>
 
-    <div class="alert alert-primary" role="alert">
+    <div class="alert alert-primary d-flex justify-content-center" role="alert">
       Check our Instagram for live updates.
     </div>
 
