--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
         <nav class="py-2 bg-light border-bottom">
             <div class="container d-flex flex-wrap">
               <ul class="nav me-auto">
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Contact</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link link-dark px-2">Contact</a></li>
                 <li class="nav-item"><a href="faqs.html" class="nav-link link-dark px-2">FAQs</a></li>
                 <li class="nav-item"><a href="gallery.html" class="nav-link active link-dark px-2" aria-current="page">Gallery</a></li>
               </ul>
