--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="py-2 bg-light border-bottom">
             <div class="container d-flex flex-wrap">
               <ul class="nav me-auto">
-                <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Contact</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link link-dark px-2">Contact</a></li>
                 <li class="nav-item"><a href="faqs.html" class="nav-link link-dark px-2">FAQs</a></li>
                 <li class="nav-item"><a href="gallery.html" class="nav-link link-dark px-2">Gallery</a></li>
               </ul>
@@ -113,6 +113,13 @@
           <img src="http://placekitten.com/1000/600" class="img-fluid" alt="...">
         </div>
 
+
+        <section class="container bg-light p-3">
+          <h2 class="p2" id="contact">Contact Information:</h2>
+          <p class="p2">skatespace@gmail.com</p>
+          <p class="p2">0765432198</p>
+          <p class="p2">@skatespaceUK on all social media</p>
+        </section>
         </main>   
 
 
