--- a/whatson.html
+++ b/whatson.html
@@ -69,7 +69,7 @@
       <div class="container-fluid row p-5">
 
         <div class="col-12 p-3 col-md-6 col-lg-6 d-flex justify-content-evenly">
-          <img src="http://placekitten.com/500/500" class="img-fluid" alt="...">
+          <img src="images/insta_1.jpg" class="img-fluid" alt="Instagram Post">
          </div>
    
         <div class="col-12 p-3 col-md-6 col-lg-6 align-self-center">
