--- a/gallery.html
+++ b/gallery.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class="col-6 col-md-6 col-lg-6 p-3">
-          <img src="http://placekitten.com/600/600" alt="lorem pixum image" class="img-fluid" />
+          <img src="images/post_2.jpg" alt="lorem pixum image" class="img-fluid" />
         </div>
       </div>
     
