--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
 
 
-        <section class="container bg-light p-3">
+        <section class="container bg-light p-3 pb-3">
           <h2 class="p2" id="contact">Contact Information:</h2>
           <p class="p2">skatespace@gmail.com</p>
           <p class="p2">0765432198</p>
@@ -124,7 +124,7 @@
 
 
         <div class="container-fluid border-top bg-light">
-          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top pt-3">
             <div class="col-md-4 d-flex align-items-center">
               <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
                 <img src="images/small_logo.svg" alt="Logo" width="40">
