--- a/faqs.html
+++ b/faqs.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="col-lg-12 d-flex justify-content-center pt-5 pb-5">
-      <img src="http://placekitten.com/1000/600" class="img-fluid" alt="...">
+      <img src="images/posterskate_1.jpg" height="auto" width="700" class="img-fluid" alt="...">
     </div>
 
 
