--- a/booking.html
+++ b/booking.html
@@ -91,19 +91,19 @@
       <div class="row d-flex justify-content-center p-5">
 
         <div class="col-lg-4 align-items-center p-5">
-          <img src="http://placekitten.com/400/400" class="img-fluid" alt="...">
+          <img src="images/skateimg.jpeg" class="img-fluid" alt="...">
           <h2 class="fw-normal p-3">Roller Disco</h2>
           <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
         </div>
 
         <div class="col-lg-4 align-items-center p-5">
-          <img src="http://placekitten.com/400/400" class="img-fluid" alt="...">
+          <img src="images/square4.jpeg" class="img-fluid" alt="...">
           <h2 class="fw-normal p-3">Birthday Party</h2>
           <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
         </div>
 
         <div class="col-lg-4 align-items-center p-5">
-          <img src="http://placekitten.com/400/400" class="img-fluid" alt="...">
+          <img src="images/square3.jpeg" class="img-fluid" alt="...">
           <h2 class="fw-normal p-3">Free Skate</h2>
           <p>And lastly this, the third column of representative placeholder content.</p>
         </div>
