--- a/gallery.html
+++ b/gallery.html
@@ -56,15 +56,15 @@
 
       <section class="row p-3">
         <div class=" col-md-7 col-lg-4 col-sm-12">
-          <img src="http://placekitten.com/600/300" alt="Skate 1" class="img-fluid"/>
+          <img src="images/gal1.jpeg" alt="Skate 1" class="img-fluid"/>
         </div>
 
         <div class=" col-md-7 col-lg-4 col-sm-12">
-          <img src="http://placekitten.com/600/300" alt="lorem pixum image" class="img-fluid" />
+          <img src="images/gal2.jpeg" alt="lorem pixum image" class="img-fluid" />
         </div>
 
         <div class=" col-md-7 col-lg-4 col-sm-12">
-          <img src="http://placekitten.com/600/300" alt="lorem pixum image" class="img-fluid"/>
+          <img src="images/gal3.jpeg" alt="lorem pixum image" class="img-fluid"/>
         </div>
 
       </section>
@@ -74,13 +74,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
+                <img src="images/gal4.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="https://placedog.net/600/300" class="d-block w-100" alt="...">
+                <img src="images/gal5.jpeg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="https://placebear.com/600/300" class="d-block w-100" alt="...">
+                <img src="images/gal6.jpeg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -98,7 +98,7 @@
     
       <div class="container d-flex justify-content-center p-5">
         <div class="col-6 col-md-6 col-lg-6 p-3">
-          <img src="http://placekitten.com/600/600" alt="Skate 1" class="img-fluid"/>
+          <img src="images/gallerysquare.jpeg" alt="Skate 1" class="img-fluid"/>
         </div>
 
         <div class="col-6 col-md-6 col-lg-6 p-3">
