--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
+                <img src="images/imageskate.jpeg"  width="300" height="600"class="d-block w-100" alt="...">
                 <div class="container">
                   <div class="carousel-caption text-start">
                     <h1>What's On.</h1>
@@ -65,7 +65,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
+                <img src="images/skateimg3.jpg" width="300" height="600" class="d-block w-100" alt="...">
                 <div class="container">
                   <div class="carousel-caption">
                     <h1>Book us for your own event.</h1>
@@ -75,7 +75,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="http://placekitten.com/600/300" class="d-block w-100" alt="...">
+                <img src="images/skateimg2.jpeg" width="300" height="600" class="d-block w-100" alt="...">
                 <div class="container">
                   <div class="carousel-caption text-end">
                     <h1>How to Find Us.</h1>
@@ -99,7 +99,7 @@
         <div class="container-fluid row pt-5">
        
             <div class="col-12 p-3 col-md-6 col-lg-6 d-flex justify-content-evenly">
-             <img src="http://placekitten.com/500/500" class="img-fluid" alt="...">
+             <img src="images/square1.jpeg" class="img-fluid" alt="...">
             </div>
          
             <div class="align-self-center col-12 col-md-6 col-lg-6">
@@ -110,7 +110,7 @@
         </div>
 
         <div class="col-lg-12 d-flex justify-content-center pt-5 pb-5">
-          <img src="http://placekitten.com/1000/600" class="img-fluid" alt="...">
+          <img src="images/ghost.jpeg" width="800" height="auto" class="img-fluid" alt="...">
         </div>
 
 
