--- a/prices.html
+++ b/prices.html
@@ -56,7 +56,7 @@
       <div class="container-fluid row p-5">
        
         <div class="col-12 p-3 col-md-6 col-lg-6 d-flex justify-content-evenly">
-         <img src="http://placekitten.com/500/500" class="img-fluid" alt="...">
+         <img src="images/pricessquare.jpeg" class="img-fluid" alt="...">
         </div>
      
         <div class="align-self-center col-12 col-md-6 col-lg-6 py-3">
@@ -131,7 +131,7 @@
       </div>
 
       <div class="col-12 p-3 col-md-6 col-lg-6 d-flex justify-content-evenly pb-5">
-        <img src="http://placekitten.com/500/500" class="img-fluid" alt="...">
+        <img src="images/pricesquare2.jpeg" class="img-fluid" alt="...">
        </div>
 
   </div>
@@ -147,7 +147,7 @@
   <div class="container-fluid row d-flex justify-content-center p-5">
 
   <div class="col-lg-12 d-flex justify-content-center">
-    <img src="http://placekitten.com/1000/600" class="img-fluid" alt="...">
+    <img src="images/price1.jpeg" class="img-fluid" alt="...">
   </div>
 
   
