--- a/faqs.html
+++ b/faqs.html
@@ -58,23 +58,23 @@
 
         <a href="#" class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Question One</h5>
+            <h5 class="mb-1">Can i brind my own skates?</h5>
           </div>
-          <p class="mb-1">Answer goes here.</p>
+          <p class="mb-1">Of Course, while we have skates to hire, you are welcome to bring your own. We also offer to service any skates for free.</p>
         </a>
 
         <a href="#" class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Question Two</h5>
+            <h5 class="mb-1">Do you accept hire forms for festivals?</h5>
           </div>
-          <p class="mb-1">Answer goes here.</p>
+          <p class="mb-1">Yes, but due to the large size of the event, this will be handles over the phone/emails to ensure we can be fully prepared.</p>
         </a>
 
         <a href="#" class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Questions Three</h5>
+            <h5 class="mb-1">What if I don't know how to skate?</h5>
           </div>
-          <p class="mb-1">Answer goes here.</p>
+          <p class="mb-1">Whether it's a lesson or not, our skate marshalls are here to help everyone get started and learn the basics.</p>
         </a>
 
       </div>
