--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
          
             <div class="align-self-center col-12 col-md-6 col-lg-6">
              <h2>About Us</h2>
-             <p class="pt-3">How doth the little crocodile Improve his shining tail, And pour the waters of the Nile On every golden scale! How cheerfully he seems to grin, How neatly spreads his claws, And welcomes little fishes in, With gently smiling jaws!</p>
+             <p class="pt-3">Here at Skate Space, we are aiming to create a welcoming environment where people of all abilities can learn to skate. We want to build a friendly community around our love for the sport.</p>
             </div>
         
         </div>
