--- a/prices.html
+++ b/prices.html
@@ -64,30 +64,30 @@
             <thead>
               <tr>
                 <th scope="col"></th>
-                <th scope="col">With Skate Hire</th>
                 <th scope="col">Without Skate Hire</th>
+                <th scope="col">With Skate Hire</th>
               </tr>
             </thead>
             <tbody class="table-group-divider">
               <tr>
                 <th scope="row">Free Skate: 1 Hour</th>
-                <td>£££</td>
-                <td>£££</td>
+                <td>£4</td>
+                <td>£5.50</td>
               </tr>
               <tr>
                 <th scope="row">Free Skate: 2 Hour</th>
-                <td>£££</td>
-                <td>£££</td>
+                <td>£6</td>
+                <td>£7.50</td>
               </tr>
               <tr>
                 <th scope="row">Lessons: 1 Hour</th>
-                <td>£££</td>
-                <td>£££</td>
+                <td>£10</td>
+                <td>£11.50</td>
               </tr>
               <tr>
                 <th scope="row">Lessons: 2 Hour</th>
-                <td>£££</td>
-                <td>£££</td>
+                <td>£15</td>
+                <td>£16.50</td>
               </tr>
             </tbody>
           </table>
@@ -101,30 +101,30 @@
           <thead>
             <tr>
               <th scope="col">Roller Disco</th>
-              <th scope="col">With Skate Hire</th>
               <th scope="col">Without Skate Hire</th>
+              <th scope="col">With Skate Hire</th>
             </tr>
           </thead>
           <tbody class="table-group-divider">
             <tr>
               <th scope="row">Child Ticket</th>
-              <td>£££</td>
-              <td>£££</td>
+              <td>£5</td>
+              <td>£6.50</td>
             </tr>
             <tr>
               <th scope="row">Adult Ticket</th>
-              <td>£££</td>
-              <td>£££</td>
+              <td>£9</td>
+              <td>£10.50</td>
             </tr>
             <tr>
               <th scope="row">Student Ticket</th>
-              <td>£££</td>
-              <td>£££</td>
+              <td>£7</td>
+              <td>£8.50</td>
             </tr>
             <tr>
               <th scope="row">Group Deal: 4 People</th>
-              <td>£££</td>
-              <td>£££</td>
+              <td>£25</td>
+              <td>£27</td>
             </tr>
           </tbody>
         </table>
@@ -155,31 +155,31 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">Roller Disco</th>
-              <th scope="col">With Skate Hire</th>
-              <th scope="col">Without Skate Hire</th>
+              <th scope="col">Event Type</th>
+              <th scope="col">With Floor Hire</th>
+              <th scope="col">Without Floor Hire</th>
             </tr>
           </thead>
           <tbody class="table-group-divider">
             <tr>
-              <th scope="row">Child Ticket</th>
-              <td>£££</td>
-              <td>£££</td>
+              <th scope="row">Birthday Parties: 3 Hour</th>
+              <td>£100</td>
+              <td>£70</td>
             </tr>
             <tr>
-              <th scope="row">Adult Ticket</th>
-              <td>£££</td>
-              <td>£££</td>
+              <th scope="row">Roller Disco: 3 Hour</th>
+              <td>£120</td>
+              <td>£90</td>
             </tr>
             <tr>
-              <th scope="row">Student Ticket</th>
-              <td>£££</td>
-              <td>£££</td>
+              <th scope="row">Roller Disco: 5 Hour</th>
+              <td>£150</td>
+              <td>£120</td>
             </tr>
             <tr>
-              <th scope="row">Group Deal: 4 People</th>
-              <td>£££</td>
-              <td>£££</td>
+              <th scope="row">General Hire (Free Skate)</th>
+              <td>£80</td>
+              <td>£70</td>
             </tr>
           </tbody>
         </table>
