--- a/whatson.html
+++ b/whatson.html
@@ -49,7 +49,7 @@
         <div class="row d-flex justify-content-center">
           <div class="col-sm-8 col-md-7 py-4">
             <h2 class="text-black d-flex justify-content-center">Find Us!</h2>
-            <p class="text-muted p-3">add some more information here</p>
+            <p class="text-muted p-3">Here you can find our map with markers to telll you our current location as well as future ones. Making it easy for you to plan ahead and find us. Be sure to check out our Instagram for live updates.</p>
           </div>
         </div>
       </div> 
