--- a/booking.html
+++ b/booking.html
@@ -93,19 +93,19 @@
         <div class="col-lg-4 align-items-center p-5">
           <img src="images/skateimg.jpeg" class="img-fluid" alt="...">
           <h2 class="fw-normal p-3">Roller Disco</h2>
-          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+          <p>When Hiring us for a Roller Disco, we will provide dj's and lights to keep up the eneregy, we will also play games with the group (If you want) such as stuck in the mud or tag. For more details, please feel free to call us.</p>
         </div>
 
         <div class="col-lg-4 align-items-center p-5">
           <img src="images/square4.jpeg" class="img-fluid" alt="...">
           <h2 class="fw-normal p-3">Birthday Party</h2>
-          <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+          <p>We will make planning a birthday party easy for you, as we will handle most things, all you need to do in invite your friends. We will provide music, food and fun for all. This is particulary popular with kids.</p>
         </div>
 
         <div class="col-lg-4 align-items-center p-5">
           <img src="images/square3.jpeg" class="img-fluid" alt="...">
           <h2 class="fw-normal p-3">Free Skate</h2>
-          <p>And lastly this, the third column of representative placeholder content.</p>
+          <p>This option simply allows you and your friends to skate. Our skate marshalls will be there to assist everyone when getting started.</p>
         </div>
       </div>
 
