--- a/index.html
+++ b/index.html
@@ -147,3 +147,14 @@
     </body>
 
 </html>
+
+<!--BIBLIOGRAGY-->
+
+<!-- https://getbootstrap.com/docs/5.3/forms/overview/ -->
+<!-- https://getbootstrap.com/docs/5.3/components/list-group/ -->
+<!-- https://getbootstrap.com/docs/5.3/examples/list-groups/ -->
+<!-- https://getbootstrap.com/docs/5.3/components/carousel/ -->
+<!-- https://getbootstrap.com/docs/5.3/examples/carousel/ -->
+<!-- https://getbootstrap.com/docs/5.3/utilities/flex/ -->
+<!-- https://getbootstrap.com/docs/5.3/examples/headers/-->
+<!-- https://getbootstrap.com/docs/5.3/examples/footers/ -->
