--- a/faqs.html
+++ b/faqs.html
@@ -58,7 +58,7 @@
 
         <a href="#" class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Can i brind my own skates?</h5>
+            <h5 class="mb-1">Can i bring my own skates?</h5>
           </div>
           <p class="mb-1">Of Course, while we have skates to hire, you are welcome to bring your own. We also offer to service any skates for free.</p>
         </a>
